turnkey-openldap-16.1 (1) turnkey; urgency=low

  * Install latest upstream release of phpLDAPadmin from GitHub - v1.2.6.2. We
    were previously installing from 'master', but that is now tracking v2
    development (no v2.x release yet).

  * Include Webmin LDAP module by default. Closes #864.

  * Note: Please refer to turnkey-core's 16.1 changelog for changes common to
    all appliances. Here we only describe changes specific to this appliance.

 -- Jeremy Davis <jeremy@turnkeylinux.org>  Thu, 04 Feb 2021 10:47:44 +1100

turnkey-openldap-16.0 (1) turnkey; urgency=low

  * Updated all relevant Debian packages to Buster/10 versions; including
    OpenLDAP (slapd) to 2.4.47 & PHP 7.3 (for phpldapadmin).

  * Update phpldapadmin to latest upstream version - 1.2.5. Plus also add
    cookie encryption (via setting blowfish seed) and disable anonymous
    access.

  * Explcitly disable TLS<1.2 (i.e. SSLv3, TLSv1, TLSv1.1) for webserver/
    phpldapadmin. (v15.x TurnKey releases supported TLS 1.2, but could fallback
    as low as TLSv1).

  * Update webserver SSL/TLS cyphers to provide "Intermediate" browser/client
    support (suitable for "General-purpose servers with a variety of clients,
    recommended for almost all systems"). As provided by Mozilla via
    https://ssl-config.mozilla.org/.

  * Note: Please refer to turnkey-core's changelog for changes common to all
    appliances. Here we only describe changes specific to this appliance.

 -- Jeremy Davis <jeremy@turnkeylinux.org>  Thu, 02 Jul 2020 15:54:14 +1000

turnkey-openldap-15.1 (1) turnkey; urgency=low

  * Include a sleep in the OpenLDAP inithook which resolves intermittant
    initialisation issues, including a TLS/SSL issue. Closes #1176 & #1337.
    [ Stefan Davis ]

 -- Jeremy Davis <jeremy@turnkeylinux.org>  Mon, 24 Jun 2019 15:22:34 +1000

turnkey-openldap-15.0 (1) turnkey; urgency=low

  * Includes PHP7.0 (installed from Debian repos)

  * Updated PHP default settings
