@@ -1,5 +1,7 @@
 turnkey-openldap-16.1 (1) turnkey; urgency=low
 
+  * Use MDB backend. Previously we were using deprecated HDB backend.
+
   * Install latest upstream release of phpLDAPadmin from GitHub - v1.2.6.2. We
     were previously installing from 'master', but that is now tracking v2
     development (no v2.x release yet).
@@ -9,7 +11,7 @@ turnkey-openldap-16.1 (1) turnkey; urgency=low
   * Note: Please refer to turnkey-core's 16.1 changelog for changes common to
     all appliances. Here we only describe changes specific to this appliance.
 
- -- Jeremy Davis <jeremy@turnkeylinux.org>  Thu, 04 Feb 2021 10:47:44 +1100
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Thu, 04 Feb 2021 14:46:11 +1100
 
 turnkey-openldap-16.0 (1) turnkey; urgency=low
 
